Проект второй страницы с регистарицией создан

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
 
     <br>
     <h3 class="title">Russian League 2019/2020</h3>
-    <a class="newGameText" ng-click="createNewGame()" href="info/info.html">New Game</a> <br> <br> <br>
+    <a class="newGameText" href="registr/registr.html">New Game</a> <br> <br> <br>
     <a class="loadGameText" href="">Load Game</a>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <h5 class="bottom">sargassov &copy;</h5>
@@ -55,7 +55,7 @@
     <ng-view></ng-view>
 
     <script src="index.js"></script>
-    <script src="ulist.js"></script>
+    <script src="registr/registr.js"></script>
     <script src="editor.js"></script>
     <script src="new_user.js"></script>
 </div>
