--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,7 +56,7 @@
 
     <script src="index.js"></script>
     <script src="registr/registr.js"></script>
-    <script src="editor.js"></script>
+    <script src="main_menu/main_menu.js"></script>
     <script src="new_user.js"></script>
 </div>
 
