--- a/src/main/resources/static/registr/registr.html
+++ b/src/main/resources/static/registr/registr.html
@@ -37,7 +37,7 @@
 				<p></p>
 				<input class="form-control" type="text" placeholder="Where are you from"
 					   ng-model="user.homeTown">
-			</div>
+
 
 			<p></p>
 			<p>
@@ -63,6 +63,7 @@
 				</select>
 
 			</p>
+			</div>
 
 			<button class="btn btn-primary" href="../main_menu/main_menu.html" ng-click="createNewGame()">Save</button>
 			<button class="btn btn-secondary" ng-click="clearForm()">Clear</button>
@@ -72,7 +73,7 @@
 	<script src="registr.js"></script>
 	<script src="../index.js"></script>
 	<script src="../main_menu/main_menu.js"></script>
-<!--	<script src="new_user.js"></script>-->
+	<script src="../team_menu/team_menu.js"></script>
 </div>
 
 
