--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -34,7 +34,7 @@
 		</div>
 		<p></p>
 
-		<a class="main_link" href="http://">Team</a>
+		<a class="main_link" href="../team_menu/team_menu.html">Team</a>
 		<div class="tryright">
 			<a class="main_link" href="http://">Stadium</a>
 		</div>
@@ -62,7 +62,7 @@
 		<script src="main_menu.js"></script>
 		<script src="../index.js"></script>
 		<script src="../registr/registr.js"></script>
-		<!--	<script src="new_user.js"></script>-->
+		<script src="../team_menu/team_menu.js"></script>
 	</div>
 
 
