Подготовлена странца Players

--- a/src/main/resources/static/team_menu/team_menu.html
+++ b/src/main/resources/static/team_menu/team_menu.html
@@ -31,7 +31,7 @@
 		<div class="submenu">
 
 			<br>
-			<p><a class="links" href="">Players</a></p>
+			<p><a class="links" href="../players/players.html">Players</a></p>
 			<br>
 
 			<p><a class="links" href="">Placement</a> </p>
@@ -55,6 +55,7 @@
 		<script src="../index.js"></script>
 		<script src="../main_menu/main_menu.js"></script>
 		<script src="../registr/registr.js"></script>
+		<script src="../players/players.js"></script>
 		<script src="team_menu.js"></script>
 	</div>
 
