Работа над страницей расстановок. Создана возможность выбирать расстановку, удалять всех игроков из нее или по одному. Реализована возможность автозаполнения состава. Не реализована возможность добавлять игроков по одному(не хватает знани фронта).

--- a/src/main/resources/static/team_menu/team_menu.html
+++ b/src/main/resources/static/team_menu/team_menu.html
@@ -34,7 +34,7 @@
 			<p><a class="links" href="../players/players.html">Players</a></p>
 			<br>
 
-			<p><a class="links" href="">Placement</a> </p>
+			<p><a class="links" href="../placement/placement.html">Placement</a> </p>
 
 			<br>
 			<p><a class="links" href="">Select a Captain</a> </p>
