--- a/src/main/resources/static/players/players.html
+++ b/src/main/resources/static/players/players.html
@@ -23,10 +23,11 @@
 
 <body>
 <div class="container" ng-controller="playersController">
-    <h4 class="header">{{team}} Players</h4>
+    <h4 class="header">{{team.name}} players</h4>
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
+    <a class="linktext" href="../team_menu/team_menu.html">Back to Team Menu</a><br>
     <button ng-click="loadPlayersSort(0)">Name</button>
     <button ng-click="loadPlayersSort(1)">Club</button>
     <button ng-click="loadPlayersSort(2)">Natio</button>
