--- a/src/main/resources/static/placement/placement.html
+++ b/src/main/resources/static/placement/placement.html
@@ -79,8 +79,8 @@
             <td class="cell">{{p.name}}</td>
             <td class="cell">{{p.position}}</td>
             <td class="cell">{{p.power}}</td>
-            <td><button ng-click="changePlayerInPlacement(p.position)">Change</button></td>
-            <td><button ng-click="deleteInPlacement(p.id)">{{p.name}} delete</button></td>
+            <td><button class="btn btn-primary" ng-click="changePlayerInPlacement(p.position)">Change</button></td>
+            <td><button class="btn btn-primary" ng-click="deleteInPlacement(p.number)">{{p.name}} delete</button></td>
         </tr>
         </tbody>
     </table>
