--- a/src/main/resources/static/player_window/player_window.html
+++ b/src/main/resources/static/player_window/player_window.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html ng-app="players">
+<html ng-app="player_window">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Players</title>
+    <title>Current Player</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -16,86 +16,50 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="players.js"></script>
-    <link rel="stylesheet" href="players.css">
+    <script src="player_window.js"></script>
+    <link rel="stylesheet" href="player_window.css">
 
 </head>
 
 <body>
-<div class="container" ng-controller="playersController">
-    <h4 class="header">{{team.name}} players</h4>
+<div class="container" ng-controller="player_windowController">
+    <h4 class="header">{{player.name}}</h4>
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
-    <a class="linktext" href="../team_menu/team_menu.html">Back to Team Menu</a><br>
-    <button ng-click="loadPlayersSort(0)">Name</button>
-    <button ng-click="loadPlayersSort(1)">Club</button>
-    <button ng-click="loadPlayersSort(2)">Natio</button>
-    <button ng-click="loadPlayersSort(3)">Number</button>
-    <button ng-click="loadPlayersSort(4)">Pos</button>
-    <button ng-click="loadPlayersSort(5)">Gk</button>
-    <button ng-click="loadPlayersSort(6)">Def</button>
-    <button ng-click="loadPlayersSort(7)">Mid</button>
-    <button ng-click="loadPlayersSort(8)">Forw</button>
-    <button ng-click="loadPlayersSort(9)">Cap</button>
-    <button ng-click="loadPlayersSort(10)">Inj</button>
-    <button ng-click="loadPlayersSort(11)">Trn</button>
-    <button ng-click="loadPlayersSort(12)">Year</button>
-    <button ng-click="loadPlayersSort(13)">StrPl</button>
-    <button ng-click="loadPlayersSort(14)">Power</button>
-    <button ng-click="loadPlayersSort(15)">Tire</button>
-    <button ng-click="loadPlayersSort(16)">TBT</button>
-    <button ng-click="loadPlayersSort(17)">Price</button>
-    <table class="table table-hover">
-            <tr>
-                <td class="cell">Name</td>
-                <td class="cell">Club</td>
-                <td class="cell">Natio</td>
-                <td class="cell">Number</td>
-                <td class="cell">Pos</td>
-                <td class="cell">Gk</td>
-                <td class="cell">Def</td>
-                <td class="cell">Mid</td>
-                <td class="cell">Forw</td>
-                <td class="cell">Cap</td>
-                <td class="cell">Inj</td>
-                <td class="cell">Trn</td>
-                <td class="cell">Year</td>
-                <td class="cell">StrPl</td>
-                <td class="cell">Power</td>
-                <td class="cell">Tire</td>
-                <td class="cell">TBT</td>
-                <td class="cell">Price</td>
-            </tr>
-            <tbody>
-            <tr ng-repeat="p in Players">
-                <td class="cell">{{p.name}}</td>
-                <td class="cell">{{p.club}}</td>
-                <td class="cell">{{p.natio}}</td>
-                <td class="cell">{{p.number}}</td>
-                <td class="cell">{{p.position}}</td>
-                <td class="cell">{{p.gkAble}}</td>
-                <td class="cell">{{p.defAble}}</td>
-                <td class="cell">{{p.midAble}}</td>
-                <td class="cell">{{p.forwAble}}</td>
-                <td class="cell">{{p.captainAble}}</td>
-                <td class="cell">{{p.injury}}</td>
-                <td class="cell">{{p.trainingAble}}</td>
-                <td class="cell">{{p.birthYear}}</td>
-                <td class="cell">{{p.strategyPlace}}</td>
-                <td class="cell">{{p.power}}</td>
-                <td class="cell">{{p.tire}}</td>
-                <td class="cell">{{p.timeBeforeTreat}}</td>
-                <td class="cell">{{p.price}}</td>
-                <td><button class="btn btn-primary" ng-click="getInfoAboutPlayer(p.name)">L</button></td>
-            </tr>
-            </tbody>
-    </table>
+    <a class="info_text" href="../team_menu/team_menu.html">Back to Team Menu</a>
+    <a class="info_text" href="../players/players.html">Back to Players Menu</a><br>
+    <hr>
+
+        <div >
+            <li class="prev_text">Name: <span class="info_text">{{player.name}}</span></li>
+            <li class="prev_text">Club: <span class="info_text">{{player.club}}</span></li>
+            <li class="prev_text">Nationality: <span class="info_text">{{player.natio}}</span></li>
+            <li class="prev_text">Number: <span class="info_text">{{player.number}}</span></li>
+            <li class="prev_text">Position: <span class="info_text">{{player.position}}</span></li>
+            <li class="prev_text">Goalkeeper abilities: <span class="info_text">{{player.gkAble}}</span></li>
+            <li class="prev_text">Defender abilities: <span class="info_text">{{player.defAble}}</span></li>
+            <li class="prev_text">Midfielder abilities: <span class="info_text">{{player.midAble}}</span></li>
+            <li class="prev_text">Forward abilities: <span class="info_text">{{player.forwAble}}</span></li>
+            <li class="prev_text">Captain abilities: <span class="info_text">{{player.captainAble}}</span></li>
+            <li class="prev_text">Training abilities: <span class="info_text">{{player.trainingAble}}</span></li>
+            <li class="prev_text">Injury: <span class="info_text">{{player.injury}}</span></li>
+            <li class="prev_text">Birth Year: <span class="info_text">{{player.birthYear}}</span></li>
+            <li class="prev_text">Strategy Place: <span class="info_text">{{player.strategyPlace}}</span></li>
+            <li class="prev_text">Tire: <span class="info_text">{{player.tire}}</span></li>
+            <li class="prev_text">Time before treatment: <span class="info_text">{{player.timeBeforeTreat}}</span></li>
+            <li class="prev_text">Power: <span class="info_text">{{player.power}}</span></li>
+            <li class="prev_text">Price: <span class="info_text">{{player.price}} mln $</span></li>
+        </div>
+    <button class="btn btn-primary" ng-click="getAnotherPlayerMinus(player.number)">Previous</button>
+    <button class="btn btn-primary" ng-click="getAnotherPlayerPlus(player.number)">Next</button>
+
         <p></p>
 
 
 
     <script src="../index.js"></script>
+    <script src="../player_window/player_window.js"></script>
     <script src="../main_menu/main_menu.js"></script>
     <script src="../registr/registr.js"></script>
     <script src="../players/players.js"></script>
