Добавлена страница с возможностью поменять капитана команды

--- a/src/main/resources/static/team_menu/team_menu.html
+++ b/src/main/resources/static/team_menu/team_menu.html
@@ -37,7 +37,7 @@
 			<p><a class="links" href="../placement/placement.html">Placement</a> </p>
 
 			<br>
-			<p><a class="links" href="">Select a Captain</a> </p>
+			<p><a class="links" href="../captains/captains.html">Select a Captain</a> </p>
 
 			<br>
 			<p><a class="links" href="">Create New Player</a> </p>
