Добавлена страница с возможностью добавить созданного игрока в свою команду

--- a/src/main/resources/static/registr/registr.html
+++ b/src/main/resources/static/registr/registr.html
@@ -42,8 +42,7 @@
 			<p></p>
 			<p>
 
-				<select class="form-control" placeholder="Choose Your club" ng-model="user.teamName">
-					<option>Select your team</option>
+				<select class="form-control" typeof="text" placeholder="Choose Your club" ng-model="user.teamName">
 					<option class="ahmat">Ahmat</option>
 					<option class="arsenal">Arsenal</option>
 					<option class="cska">CSKA</option>
