--- a/src/main/resources/static/team_menu/team_menu.html
+++ b/src/main/resources/static/team_menu/team_menu.html
@@ -40,7 +40,7 @@
 			<p><a class="links" href="../captains/captains.html">Select a Captain</a> </p>
 
 			<br>
-			<p><a class="links" href="">Create New Player</a> </p>
+			<p><a class="links" href="../create_player/create_player.html">Create New Player</a> </p>
 
 			<br>
 			<p><a class="links" href="">Youth Academy</a> </p>
