Добавлена возможность набирать юниоров в команду вручную. Завершен раздел Team в меню.

--- a/src/main/resources/static/team_menu/create_player/create_player.html
+++ b/src/main/resources/static/team_menu/create_player/create_player.html
@@ -32,7 +32,7 @@
 
     <h6 class="comment">Set all forms</h6>
     <form novalidate class="text_form">
-        <a class="link_text" href="../team_menu/team_menu.html">Back to Team Menu</a>
+        <a class="link_text" href="../team_menu.html">Back to Team Menu</a>
 
         <div class="text_form">
             <input class="form-control" type="text" placeholder="Name" required ng-model="player.name">
@@ -71,9 +71,9 @@
     </form>
 
     <script src="registr.js"></script>
-    <script src="../index.js"></script>
-    <script src="../main_menu/main_menu.js"></script>
-    <script src="../team_menu/team_menu.js"></script>
+    <script src="../../index.js"></script>
+    <script src="../../main_menu/main_menu.js"></script>
+    <script src="../team_menu.js"></script>
 </div>
 
 
