--- a/src/main/resources/static/team_menu/placement/placement.html
+++ b/src/main/resources/static/team_menu/placement/placement.html
@@ -27,7 +27,7 @@
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
-    <a class="linktext" href="../team_menu/team_menu.html">Back to Team Menu</a><br>
+    <a class="linktext" href="../team_menu.html">Back to Team Menu</a><br>
     <table class="table table-hover">
         <tr>
             <td class="cell">Current Placement</td>
