--- a/src/main/resources/static/team_menu/player_window/player_window.html
+++ b/src/main/resources/static/team_menu/player_window/player_window.html
@@ -27,7 +27,7 @@
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
-    <a class="info_text" href="../team_menu/team_menu.html">Back to Team Menu</a>
+    <a class="info_text" href="../team_menu.html">Back to Team Menu</a>
     <a class="info_text" href="../players/players.html">Back to Players Menu</a><br>
     <hr>
 
@@ -58,10 +58,10 @@
 
 
 
-    <script src="../index.js"></script>
-    <script src="../player_window/player_window.js"></script>
-    <script src="../main_menu/main_menu.js"></script>
-    <script src="../registr/registr.js"></script>
+    <script src="../../index.js"></script>
+    <script src="player_window.js"></script>
+    <script src="../../main_menu/main_menu.js"></script>
+    <script src="../../registr/registr.js"></script>
     <script src="../players/players.js"></script>
     <script src="team_menu.js"></script>
 </div>
