--- a/src/main/resources/static/team_menu/players/players.html
+++ b/src/main/resources/static/team_menu/players/players.html
@@ -27,7 +27,7 @@
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
-    <a class="linktext" href="../team_menu/team_menu.html">Back to Team Menu</a><br>
+    <a class="linktext" href="../team_menu.html">Back to Team Menu</a><br>
     <button ng-click="loadPlayersSort(0)">Name</button>
     <button ng-click="loadPlayersSort(1)">Club</button>
     <button ng-click="loadPlayersSort(2)">Natio</button>
@@ -95,10 +95,10 @@
 
 
 
-    <script src="../index.js"></script>
-    <script src="../main_menu/main_menu.js"></script>
-    <script src="../registr/registr.js"></script>
-    <script src="../players/players.js"></script>
+    <script src="../../index.js"></script>
+    <script src="../../main_menu/main_menu.js"></script>
+    <script src="../../registr/registr.js"></script>
+    <script src="players.js"></script>
     <script src="team_menu.js"></script>
 </div>
 
