--- a/src/main/resources/static/team_menu/team_menu.html
+++ b/src/main/resources/static/team_menu/team_menu.html
@@ -31,19 +31,19 @@
 		<div class="submenu">
 
 			<br>
-			<p><a class="links" href="../players/players.html">Players</a></p>
+			<p><a class="links" href="players/players.html">Players</a></p>
 			<br>
 
-			<p><a class="links" href="../placement/placement.html">Placement</a> </p>
+			<p><a class="links" href="placement/placement.html">Placement</a> </p>
 
 			<br>
-			<p><a class="links" href="../captains/captains.html">Select a Captain</a> </p>
+			<p><a class="links" href="captains/captains.html">Select a Captain</a> </p>
 
 			<br>
-			<p><a class="links" href="../create_player/create_player.html">Create New Player</a> </p>
+			<p><a class="links" href="create_player/create_player.html">Create New Player</a> </p>
 
 			<br>
-			<p><a class="links" href="">Youth Academy</a> </p>
+			<p><a class="links" href="youth_academy/youth_academy.html">Youth Academy</a> </p>
 
 			<br>
 			<p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
