--- a/src/main/resources/static/team_menu/captains/captains.html
+++ b/src/main/resources/static/team_menu/captains/captains.html
@@ -27,7 +27,7 @@
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
-    <a class="linktext" href="../team_menu/team_menu.html">Back to Team Menu</a><br>
+    <a class="linktext" href="../team_menu.html">Back to Team Menu</a><br>
     <table class="table table-hover">
         <tr>
             <td class="cell">Name</td>
@@ -47,9 +47,9 @@
 
 
 
-    <script src="../index.js"></script>
-    <script src="../main_menu/main_menu.js"></script>
-    <script src="../registr/registr.js"></script>
+    <script src="../../index.js"></script>
+    <script src="../../main_menu/main_menu.js"></script>
+    <script src="../../registr/registr.js"></script>
     <script src="../players/players.js"></script>
     <script src="team_menu.js"></script>
 </div>
