--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -40,7 +40,7 @@
 		</div>
 		<p></p>
 
-		<a class="main_link" href="http://">Training</a>
+		<a class="main_link" href="../training/training.html">Training</a>
 		<div class="tryright">
 			<a class="main_link" href="http://">League</a>
 		</div>
