Добавлена функция найма и увольнения тренеров и закрепления за ними игроков для постоянной тренировки. Не устранен баг во время редиректа на странице

--- a/src/main/resources/static/registr/registr.html
+++ b/src/main/resources/static/registr/registr.html
@@ -64,8 +64,11 @@
 			</p>
 			</div>
 
-			<button class="btn btn-primary" href="../main_menu/main_menu.html" ng-click="createNewGame()">Save</button>
-			<button class="btn btn-secondary" ng-click="clearForm()">Clear</button>
+			<div class="div-button">
+				<button class="btn btn-primary" href="../main_menu/main_menu.html" ng-click="createNewGame()">Save</button>
+				<button class="btn btn-secondary" ng-click="clearForm()">Clear</button>
+			</div>
+
 
 		</form>
 
