--- a/src/main/resources/static/training/training.html
+++ b/src/main/resources/static/training/training.html
@@ -31,7 +31,7 @@
     <div class="submenu">
 
         <br>
-        <p><a class="links" href="">Coaches</a></p>
+        <p><a class="links" href="coaches/coaches.html">Coaches</a></p>
         <br>
 
         <p><a class="links" href="">Training programs</a> </p>
