Добавлена страница для изменения тренировочной нагрузки. Устранено несколько багов: 1. Баг неправильного удаления тренера 2. Баг возможности двум тренерам работать с одним игроком 3. Баг неверного подсчета trainingAble у тренера.

--- a/src/main/resources/static/training/training.html
+++ b/src/main/resources/static/training/training.html
@@ -34,7 +34,7 @@
         <p><a class="links" href="coaches/coaches.html">Coaches</a></p>
         <br>
 
-        <p><a class="links" href="">Training programs</a> </p>
+        <p><a class="links" href="training_programs/training_programs.html">Training programs</a> </p>
 
         <br>
         <p><a class="links" href="">Training balance</a> </p>
