Добавлена страница с отображением тренировок. Завершен раздел Training

--- a/src/main/resources/static/training/training.html
+++ b/src/main/resources/static/training/training.html
@@ -37,7 +37,7 @@
         <p><a class="links" href="training_programs/training_programs.html">Training programs</a> </p>
 
         <br>
-        <p><a class="links" href="">Training balance</a> </p>
+        <p><a class="links" href="training_balance/training_balance.html">Training balance</a> </p>
 
         <br>
         <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
