--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -46,7 +46,7 @@
 		</div>
 		<p></p>
 
-		<a class="main_link" href="http://">Transfers</a>
+		<a class="main_link" href="../transfers/transfers.html">Transfers</a>
 		<div class="tryright">
 			<a class="main_link" href="http://">Cheat Code</a>
 		</div>
