Проработана страница с функцией покупки игроков

--- a/src/main/resources/static/transfers/transfers.html
+++ b/src/main/resources/static/transfers/transfers.html
@@ -31,7 +31,7 @@
     <div class="submenu">
 
         <br>
-        <p><a class="links" href="">Bying Players</a></p>
+        <p><a class="links" href="buying/buying.html">Buying Players</a></p>
         <br>
 
         <p><a class="links" href="">Selling Players</a> </p>
