Активирована кнопка Buy. Завершены работы над страницей buying players

--- a/src/main/resources/static/transfers/buying/buying.html
+++ b/src/main/resources/static/transfers/buying/buying.html
@@ -65,7 +65,7 @@
             <td class="cell">{{o.forwAble}}</td>
             <td class="cell">{{o.power}}</td>
             <td class="cell">{{o.price}}</td>
-            <td><button class="btn btn-warning" ng-click="">Buy</button></td>
+            <td><button class="btn btn-warning" ng-click="buyPlayer(o)">Buy</button></td>
         </tr>
         </tbody>
     </table>
