--- a/src/main/resources/static/transfers/selling/selling.html
+++ b/src/main/resources/static/transfers/selling/selling.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html ng-app="transfers">
+<html ng-app="selling">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transfers</title>
+    <title>Selling Players</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -16,36 +16,40 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="transfers.js">getActualDate()</script>
-    <link rel="stylesheet" href="transfers.css">
+    <script src="selling.js"></script>
+    <link rel="stylesheet" href="selling.css">
 
 </head>
 
 <body>
-<div class="container" ng-controller="transfersController">
-    <h4 class="header">Transfers</h4>
+<div class="container" ng-controller="sellingController">
+    <h4 class="header">Selling players {{team.name}}</h4>
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
+    <a class="linktext" href="../transfers.html">Back to Transfers Menu</a><br>
+    <h3 class="team_wealth_info">{{team.name}} have {{team.wealth}} mln. $</h3>
+    <table class="table table-hover">
+        <tr>
+            <td class="cell">Name</td>
+            <td class="cell">Half price</td>
+        </tr>
+        <tbody>
+        <tr ng-repeat="p in Players">
+            <td class="cell">{{p.name}}</td>
+            <td class="cell">{{p.price}}</td>
+            <td><button class="btn btn-primary" ng-click="sellForHalfPrice(p.name, p.price)">Sell For Half Price</button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <p></p>
 
-    <div class="submenu">
-
-        <br>
-        <p><a class="links" href="buying/buying.html">Buying Players</a></p>
-        <br>
-
-        <p><a class="links" href="selling/selling.html">Selling Players</a> </p>
-
-        <br>
-        <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
 
 
-    </div>
-
-
-    <script src="../index.js"></script>
-    <script src="../main_menu/main_menu.js"></script>
-    <script src="../registr/registr.js"></script>
+    <script src="../../index.js"></script>
+    <script src="../../main_menu/main_menu.js"></script>
+    <script src="../../registr/registr.js"></script>
     <script src="../players/players.js"></script>
     <script src="team_menu.js"></script>
 </div>
