Проект страницы календаря.

--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -52,7 +52,7 @@
 		</div>
 		<p></p>
 
-		<a class="main_link" href="http://">Calendar</a>
+		<a class="main_link" href="../calendar/calendar.html">Calendar</a>
 		<div class="tryright">
 			<a class="main_link" href="http://">2</a>
 		</div>
