Проект страницы с календарем для пользовательской команды завершен. Раздел календарь завершен.

--- a/src/main/resources/static/calendar/calendar.html
+++ b/src/main/resources/static/calendar/calendar.html
@@ -31,10 +31,10 @@
     <div class="submenu">
 
         <br>
-        <p><a class="links" href="">Playing Calendar</a></p>
+        <p><a class="links" href="playing_calendar/playing_calendar.html">Playing Calendar</a></p>
         <br>
 
-        <p><a class="links" href="">Visual Calendar</a> </p>
+        <p><a class="links" href="visual_calendar/visual_calendar.html">Visual Calendar</a> </p>
 
         <br>
         <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
