--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -30,7 +30,7 @@
 
 		<a class="main_link" href="http://">Next Day</a>
 		<div class="tryright">
-			<a class="main_link" href="http://">Finance</a>
+			<a class="main_link" href="../finance/finance.html">Finance</a>
 		</div>
 		<p></p>
 
