--- a/src/main/resources/static/finance/income/income.html
+++ b/src/main/resources/static/finance/income/income.html
@@ -31,7 +31,7 @@
     <table class="table table-hover">
         <tr>
             <td class="cell">Type of Income</td>
-            <td class="cell">Value</td>
+            <td class="cell">Value mln $</td>
 
         </tr>
         <tbody>
