Завершен проект страницы Banks. Отработан баг на странице Expenses

--- a/src/main/resources/static/finance/finance.html
+++ b/src/main/resources/static/finance/finance.html
@@ -37,7 +37,10 @@
         <p><a class="links" href="expenses/expenses.html">Expenses</a> </p>
 
         <br>
-        <p><a class="links" href="">Banks</a> </p>
+        <p><a class="links" href="banks/banks.html">Banks</a> </p>
+
+        <br>
+        <p><a class="links" href="">Change Sponsor</a> </p>
 
         <br>
         <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
