Проект страницы для изменения спонсора команды готов

--- a/src/main/resources/static/finance/finance.html
+++ b/src/main/resources/static/finance/finance.html
@@ -40,7 +40,7 @@
         <p><a class="links" href="banks/banks.html">Banks</a> </p>
 
         <br>
-        <p><a class="links" href="">Change Sponsor</a> </p>
+        <p><a class="links" href="change_sponsor/change_sponsor.html">Change Sponsor</a> </p>
 
         <br>
         <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
