Проект страницы Stadium для отображения меню стадиона

--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -36,7 +36,7 @@
 
 		<a class="main_link" href="../team_menu/team_menu.html">Team</a>
 		<div class="tryright">
-			<a class="main_link" href="http://">Stadium</a>
+			<a class="main_link" href="../stadium/stadium.html">Stadium</a>
 		</div>
 		<p></p>
 
