Проект страницы Information для отображения информации о сиадионе завершен. Обновлена база данных

--- a/src/main/resources/static/stadium/stadium.html
+++ b/src/main/resources/static/stadium/stadium.html
@@ -31,7 +31,7 @@
     <div class="submenu">
 
         <br>
-        <p><a class="links" href="">Information</a></p>
+        <p><a class="links" href="info/info.html">Information</a></p>
         <br>
 
         <p><a class="links" href="">Set Ticket Cost</a> </p>
