Завершен проект страницы Set Ticket Cost раздела Стадион

--- a/src/main/resources/static/stadium/stadium.html
+++ b/src/main/resources/static/stadium/stadium.html
@@ -34,7 +34,7 @@
         <p><a class="links" href="info/info.html">Information</a></p>
         <br>
 
-        <p><a class="links" href="">Set Ticket Cost</a> </p>
+        <p><a class="links" href="ticket_cost/ticket_cost.html">Set Ticket Cost</a> </p>
 
         <br>
         <p><a class="links" href="">Split Sectors</a> </p>
