Завершен проект страницы Split sectors раздела Стадион

--- a/src/main/resources/static/stadium/stadium.html
+++ b/src/main/resources/static/stadium/stadium.html
@@ -37,7 +37,7 @@
         <p><a class="links" href="ticket_cost/ticket_cost.html">Set Ticket Cost</a> </p>
 
         <br>
-        <p><a class="links" href="">Split Sectors</a> </p>
+        <p><a class="links" href="split_sectors/split_sectors.html">Split Sectors</a> </p>
 
         <br>
         <p><a class="links" href="">Marketing</a> </p>
