Завершен проект страницы Marketing с описанием раскрутки команды и уведичения посещаемости стадиона

--- a/src/main/resources/static/stadium/stadium.html
+++ b/src/main/resources/static/stadium/stadium.html
@@ -40,7 +40,7 @@
         <p><a class="links" href="split_sectors/split_sectors.html">Split Sectors</a> </p>
 
         <br>
-        <p><a class="links" href="">Marketing</a> </p>
+        <p><a class="links" href="marketing/marketing.html">Marketing</a> </p>
 
         <br>
         <p><a class="links" href="">Build New Sitting Place</a> </p>
