--- a/src/main/resources/static/stadium/info/info.html
+++ b/src/main/resources/static/stadium/info/info.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="container" ng-controller="infoController">
-        <h4 class="header">{{team.name}} stadium information</h4>
+        <h4 class="header">{{team.stadium}} stadium information</h4>
         <hr>
         <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
         <p></p>
