--- a/src/main/resources/static/stadium/split_sectors/split_sectors.html
+++ b/src/main/resources/static/stadium/split_sectors/split_sectors.html
@@ -23,7 +23,7 @@
 
 <body>
 <div class="container" ng-controller="split_sectorsController">
-    <h4 class="header">Split sectors of {{team.name}} stadium</h4>
+    <h4 class="header">Split sectors of {{team.stadium}} stadium</h4>
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
