--- a/src/main/resources/static/stadium/ticket_cost/ticket_cost.html
+++ b/src/main/resources/static/stadium/ticket_cost/ticket_cost.html
@@ -23,7 +23,7 @@
 
 <body>
 <div class="container" ng-controller="ticket_costController">
-    <h4 class="header">{{team.name}} ticket cost</h4>
+    <h4 class="header">{{team.stadium}} ticket cost</h4>
     <hr>
     <p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
     <p></p>
