Завершен проект страницы Build new sitting places в разделе Стадион. Завершен раздел Стадион

--- a/src/main/resources/static/stadium/stadium.html
+++ b/src/main/resources/static/stadium/stadium.html
@@ -43,7 +43,7 @@
         <p><a class="links" href="marketing/marketing.html">Marketing</a> </p>
 
         <br>
-        <p><a class="links" href="">Build New Sitting Place</a> </p>
+        <p><a class="links" href="build_new_sitting_places/build_new_sitting_places.html">Build New Sitting Place</a> </p>
 
         <br>
         <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
