--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -42,7 +42,7 @@
 
 		<a class="main_link" href="../training/training.html">Training</a>
 		<div class="tryright">
-			<a class="main_link" href="http://">League</a>
+			<a class="main_link" href="../league/league.html">League</a>
 		</div>
 		<p></p>
 
