Подготовлена страница League Table

--- a/src/main/resources/static/league/league.html
+++ b/src/main/resources/static/league/league.html
@@ -31,7 +31,7 @@
         <div class="submenu">
 
             <br>
-            <p><a class="links" href="">League Table</a></p>
+            <p><a class="links" href="league_table/league_table.html">League Table</a></p>
             <br>
 
             <p><a class="links" href="">Results Table</a> </p>
