--- a/src/main/resources/static/league/league.html
+++ b/src/main/resources/static/league/league.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendar</title>
+    <title>League</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -34,7 +34,7 @@
             <p><a class="links" href="league_table/league_table.html">League Table</a></p>
             <br>
 
-            <p><a class="links" href="">Results Table</a> </p>
+            <p><a class="links" href="result_table/result_table.html">Results Table</a> </p>
             <br>
             <p><a class="links" href="">All Players</a> </p>
 
