Подготовлена страница со всеми игроками всех команд. Завершен раздел League

--- a/src/main/resources/static/league/league.html
+++ b/src/main/resources/static/league/league.html
@@ -36,7 +36,7 @@
 
             <p><a class="links" href="result_table/result_table.html">Results Table</a> </p>
             <br>
-            <p><a class="links" href="">All Players</a> </p>
+            <p><a class="links" href="all_players/all_players.html">All Players</a> </p>
 
             <br>
             <p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
