Подготовлена страница Cheat Code. У игрока появляется возможность использовать неигровые преимущества

--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -48,7 +48,7 @@
 
 		<a class="main_link" href="../transfers/transfers.html">Transfers</a>
 		<div class="tryright">
-			<a class="main_link" href="http://">Cheat Code</a>
+			<a class="main_link" href="../cheat_code/cheat_code.html">Cheat Code</a>
 		</div>
 		<p></p>
 
@@ -58,11 +58,6 @@
 		</div>
 		<p></p>
 
-
-		<script src="main_menu.js"></script>
-		<script src="../index.js"></script>
-		<script src="../registr/registr.js"></script>
-		<script src="../team_menu/team_menu.js"></script>
 	</div>
 
 
