Подготовлена странийца для смены игрового дня

--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -28,7 +28,7 @@
 		<p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
 		<p></p>
 
-		<a class="main_link" href="http://">Next Day</a>
+		<a class="main_link" href="../new_day/new_day.html">New Day</a>
 		<div class="tryright">
 			<a class="main_link" href="../finance/finance.html">Finance</a>
 		</div>
