--- a/src/main/resources/static/new_day/changes/changes.html
+++ b/src/main/resources/static/new_day/changes/changes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html ng-app="new_day">
+<html ng-app="changes">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>New Day</title>
+	<title>Changes</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -16,36 +16,29 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-	<script src="new_day.js">getActualDate()</script>
-	<link rel="stylesheet" href="new_day.css">
+	<script src="changes.js">getActualDate()</script>
+	<link rel="stylesheet" href="changes.css">
 
 </head>
 
 <body>
-	<div class="container" ng-controller="new_dayController">
-		<h4 class="header">New Day</h4>
+	<div class="container" ng-controller="changesController">
+		<h4 class="header">Changes</h4>
 		<hr>
 		<p class="date_show">Today is {{today.day}} {{today.month}} {{today.year}}</p>
 		<p></p>
-
-		<div class="submenu">
-
-			<br>
-			<p><a class="links" ng-click="createNewDay()">Go To Tomorrow</a></p>
-			<br>
-
-			<p><a class="links" href="changes/changes.html">View Changes</a> </p>
-
-			<br>
-			<p><a class="links" href="../main_menu/main_menu.html">Exit to Main Menu</a> </p>
-
-
-		</div>
+		<a class="linktext" href="../new_day.html">Back to New Day</a><br>
+		<table class="table table-hover">
+			<tr>
+				<td class="cell">All Changes</td>
+			</tr>
+			<tbody>
+				<tr ng-repeat="i in information">
+					<td class="cell">{{i.response}}</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-
-
-
-
 </body>
 
 </html>
