Тотальный рефакторинг: Изменение модуля Team в соответствии в соответствии с рефакторингом

--- a/src/main/resources/static/registr/registr.html
+++ b/src/main/resources/static/registr/registr.html
@@ -35,10 +35,9 @@
 				<p></p>
 				<input class="form-control" type="text" placeholder="Lastname" ng-model="user.lastname">
 				<p></p>
-				<input class="form-control" type="text" placeholder="Where are you from"
-					   ng-model="user.homeTown">
-
-
+				<input class="form-control" type="password" placeholder="Password" ng-model="user.password">
+				<p></p>
+				<input class="form-control" type="text" placeholder="Where are you from" ng-model="user.homeTown">
 			<p></p>
 			<p>
 
