--- a/src/main/resources/static/team_menu/create_player/create_player.html
+++ b/src/main/resources/static/team_menu/create_player/create_player.html
@@ -40,10 +40,10 @@
             <input class="form-control" type="text" maxlength="3" required placeholder="Nationality (only 3 letter)" ng-model="player.natio">
             <p></p>
             <select class="form-control" typeof="text" name="Position" required ng-model="player.position">
-                <option>GOALKEEPER</option>
-                <option>DEFENDER</option>
-                <option>MIDFIELDER</option>
-                <option>FORWARD</option>
+                <option>Goalkeeper</option>
+                <option>Defender</option>
+                <option>Midfielder</option>
+                <option>Forward</option>
             </select>
             <p></p>
             <input class="form-control" type="number" max="99" min="1" required placeholder="Goalkeeper abilities (from 1 to 99)" ng-model="player.gkAble">
