Тотальный рефакторинг: Обновление раздела Training

--- a/src/main/resources/static/training/add_new_coach/add_new_coach.html
+++ b/src/main/resources/static/training/add_new_coach/add_new_coach.html
@@ -38,16 +38,16 @@
 
         <div class="text_form">
             <select class="form-control" typeof="text" name="Position" required ng-model="coach.position">
-                <option>GOALKEEPER</option>
-                <option>DEFENDER</option>
-                <option>MIDFIELDER</option>
-                <option>FORWARD</option>
+                <option>Goalkeeper</option>
+                <option>Defender</option>
+                <option>Midfielder</option>
+                <option>Forward</option>
             </select>
             <p></p>
             <select class="form-control" typeof="text" name="Type" required ng-model="coach.type">
-                <option>LOCAL</option>
-                <option>PROFESSIONAL</option>
-                <option>WORLD_CLASS</option>
+                <option>Local</option>
+                <option>Professional</option>
+                <option>World Class</option>
             </select>
             <p></p>
         </div>
