--- a/src/main/resources/static/training/coaches/coaches.html
+++ b/src/main/resources/static/training/coaches/coaches.html
@@ -47,7 +47,7 @@
             <td class="cell">{{c.playerOnTraining}}</td>
             <td class="cell">{{c.playerTrAble}}</td>
             <td><button class="btn btn-primary" ng-click="setAnotherPlayer(c)">Set Another</button></td>
-            <td><button class="btn btn-primary" ng-click="setCoachFree(c.count)">Set Coach Free</button></td>
+            <td><button class="btn btn-primary" ng-click="setCoachFree(c.id)">Set Coach Free</button></td>
         </tr>
         </tbody>
     </table>
