--- a/src/main/resources/static/training/training_programs/training_programs.html
+++ b/src/main/resources/static/training/training_programs/training_programs.html
@@ -46,9 +46,9 @@
             <td class="cell">{{c.coachProgram}}</td>
             <td class="cell">{{c.playerOnTraining}}</td>
             <td class="cell">{{c.playerTrAble}}</td>
-            <td><button class="btn btn-success" ng-click="changeProgram(c.count, 0)">Standart</button></td>
-            <td><button class="btn btn-warning" ng-click="changeProgram(c.count, 1)">Intensive</button></td>
-            <td><button class="btn btn-danger" ng-click="changeProgram(c.count, 2)">Hard</button></td>
+            <td><button class="btn btn-success" ng-click="changeProgram(c.id, 0)">Standart</button></td>
+            <td><button class="btn btn-warning" ng-click="changeProgram(c.id, 1)">Intensive</button></td>
+            <td><button class="btn btn-danger" ng-click="changeProgram(c.id, 2)">Hard</button></td>
         </tr>
         </tbody>
     </table>
